# PKSmash

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  nx.json  package.json  workspace.json
.husky/: pre-commit
apps/rust-rocket-mongo/: Cargo.toml  project.json
apps/rust-rocket-mongo/src/: api_types.rs  db.rs  main.rs  routes.rs
apps/rust-rocket-mongo/src/api_types/: error.rs  token.rs
apps/rust-rocket-mongo/src/db/: pokemon.rs  sop.rs  user.rs
apps/rust-rocket-mongo/src/routes/: auth.rs  pksmash.rs
